--- a/WebPage/page.html
+++ b/WebPage/page.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>index</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="../public/css/page.css">
 </head>
 <body>
-    <script>
-		location="WebPage/page.html";
-	</script>
+    
 </body>
 </html>
