--- a/WebPage/page.html
+++ b/WebPage/page.html
@@ -4,8 +4,64 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="../public/css/page.css">
+    <link rel="stylesheet" href="../src/bs/css/bootstrap.min.css">
 </head>
 <body>
+    <div class="page-wrap">
+        <header class="header">
+            <div class="container" style="width:80%">
+                <div class="header_inner">
+                    <div class="left">
+                        <div class="left_logo"></div>
+                        <div class="left_menu">
+                            <nav>
+                                <ul>
+                                    <li><a href="">Home</a></li>
+                                    <li><a href="">Destination</a></li>
+                                    <li><a href="">City</a></li>
+                                    <li><a href="">Detail</a></li>
+                                    <li><a href="">About us</a></li>
+                                    <li><a href="">Contact</a></li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </header>
+
+        <div class="content">
+            <div class="hero__box_info">
+                <div class="container">
+                    <h2 class="hero__title">Vibrant Hong Kong: 3 Day</h2>
+                    <p class="hero__info"><span>3 Day 2 Night</span><span>Tokyo</span><span>709 Review</span></p>
+                </div>
+            </div>
+
+            <div class="hero__box_info">
+                <div class="container">
+                    <h2 class="hero__title">Splendours of India: Holiday of a Lifetime</h2>
+                    <p class="hero__info"><span>3 Day 2 Night</span><span>Beijing</span><span>780 Review</span></p>
+                </div>
+            </div>
+
+            <div class="hero__box_info">
+                    <div class="container">
+                        <h2 class="hero__title">Discover Hong Kong and Bangkok incl. Airfare</h2>
+                        <p class="hero__info"><span>3 Day 2 Night</span><span>Nara</span><span>746 Review</span></p>
+                    </div>
+                </div>
+        </div><!--content-->
+
+
+    </div><!--page-wrap-->
+
+
+    
+
+        <div class="footer">
+
+        </div>
     
 </body>
 </html>
