--- a/WebPage/page.html
+++ b/WebPage/page.html
@@ -16,7 +16,7 @@
                         <div class="left_menu">
                             <nav>
                                 <ul>
-                                    <li><a href="">Home</a></li>
+                                    <li><a href="">My Home</a></li>
                                     <li><a href="">Destination</a></li>
                                     <li><a href="">City</a></li>
                                     <li><a href="">Detail</a></li>
