--- a/WebPage/page.html
+++ b/WebPage/page.html
@@ -41,27 +41,55 @@
             
         </div>
         <div class="container">
-                <h2 class="hero__title">Vibrant Hong Kong: 3 Day</h2>
+                <h2 class="hero__title">Welcome to Cherry-J-travel</h2>
                 <p class="hero__info"><span>3 Day 2 Night</span><span>Tokyo</span><span>709 Review</span></p>
             </div>
     </div>
+    <div class="kong">
 
+    </div>
     <div class="two">
         <div class="container">
-            <div class="title">
-                <h2 class="title__title">
-                    Welcome to 
-                <span class="main-color">Cherry-J-travel</span>
-                <br> 
-                    We are always exploring a unique journey
-                <br> 
-                <p class="title__text">
-                    It is a long established fact that a reader will be distracted by 
-                    the readable content of a page when looking at its layout. The point 
-                    of using Lorem Ipsum is that it has a more-or-less normal distribution 
-                    of letters
-                </p>
-            </div><!-- End / title -->
+            <div class="row">
+                <div class="col-md-3">
+                    <img src="../public/images/BestHours.jpg" alt="">
+                </div>
+
+                <div class="col-md-3">
+                    <img src="../public/images/BestHours.jpg" alt="">
+                </div>
+
+                <div class="col-md-3">
+                    <img src="../public/images/BestHours.jpg" alt="">
+                </div>
+
+                <div class="col-md-3">
+                    <img src="../public/images/BestHours.jpg" alt="">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3">
+                    <img src="../public/images/BestHours.jpg" alt="">
+                </div>
+
+                <div class="col-md-3">
+                    <img src="../public/images/BestHours.jpg" alt="">
+                </div>
+
+                <div class="col-md-3">
+                    <img src="../public/images/BestHours.jpg" alt="">
+                </div>
+
+                <div class="col-md-3">
+                    <img src="../public/images/BestHours.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="kong"></div>
+    <div class="three">
+        <div class="best">
+            <h2>Best Tours</h2>
         </div>
     </div>
 </body>
