--- a/WebPage/page.html
+++ b/WebPage/page.html
@@ -99,7 +99,7 @@
     <div class="two">
         <div class="container">
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-3 photoGraph">
                     <img src="../public/images/BestHours.jpg" alt="">
                     <div class="box-image__info">
                         <h4 class="box-image__country">Hong Kong</h4>
@@ -107,7 +107,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-3">
+                <div class="col-md-3 photoGraph">
                     <img src="../public/images/BestHours.jpg" alt="">
                     <div class="box-image__info">
                         <h4 class="box-image__country">Istanbul</h4>
@@ -115,7 +115,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-3">
+                <div class="col-md-3 photoGraph">
                     <img src="../public/images/BestHours.jpg" alt="">
                     <div class="box-image__info">
                         <h4 class="box-image__country">Siem Reap</h4>
@@ -123,7 +123,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-3">
+                <div class="col-md-3 photoGraph">
                     <img src="../public/images/BestHours.jpg" alt="">
                     <div class="box-image__info">
                         <h4 class="box-image__country">Istanbul</h4>
@@ -132,7 +132,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-3 photoGraph">
                     <img src="../public/images/BestHours.jpg" alt="">
                     <div class="box-image__info">
                         <h4 class="box-image__country">Hong Kong</h4>
@@ -140,7 +140,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-3">
+                <div class="col-md-3 photoGraph">
                     <img src="../public/images/BestHours.jpg" alt="">
                     <div class="box-image__info">
                         <h4 class="box-image__country">Shanghai</h4>
@@ -148,7 +148,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-3">
+                <div class="col-md-3 photoGraph">
                     <img src="../public/images/BestHours.jpg" alt="">
                     <div class="box-image__info">
                         <h4 class="box-image__country">NewYork</h4>
@@ -156,7 +156,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-3">
+                <div class="col-md-3 photoGraph">
                     <img src="../public/images/BestHours.jpg" alt="">
                     <div class="box-image__info">
                         <h4 class="box-image__country">Hong Kong</h4>
