--- a/WebPage/page.html
+++ b/WebPage/page.html
@@ -193,94 +193,50 @@
     <div class="three">
         <div class="container">
             <h2>Best Tours</h2>
+            <!-- row start -->
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4 photoGraph">
                     <img src="../public/images/4.jpg">
-                    <div class="journal">
-                    <div class="box-image2__info">
-                        <p class="box-image2__country">Siem Reap</p>
-                        <p class="box-image2__tour">The Mekong Boutique River Cruise: Laos to China</p>
-                    </div>
-                    <div class="box-image2__info_bot">
-                        <span class="box-image2__date">7 Days / 8 Nights</span>
-                        <a class="box-image2__view" href="#">View tour</a>
-                    </div>
-                </div>
-                </div>
-
-                <div class="col-md-4">
-                    <img src="../public/images/4.jpg" alt="">
-                    <div class="journal">
-                    <div class="box-image2__info">
-                        <p class="box-image2__country">Siem Reap</p>
-                        <p class="box-image2__tour">The Mekong Boutique River Cruise: Laos to China</p>
-                    </div>
-                    <div class="box-image2__info_bot">
-                        <span class="box-image2__date">7 Days / 8 Nights</span>
-                        <a class="box-image2__view" href="#">View tour</a>
-                    </div>
+                    <div class="box-image__info">
+                        <div class="content">
+                            <h3 class="box-image2__title">Siem Reap</h3>
+                            <p class="box-image2__tour">The Mekong Boutique River Cruise: Laos to China</p>
+                            
+                            <span class="box-image2__date">7 Days / 8 Nights</span>
+                            </br>
+                            <a class="box-image2__view" href="#">View tour</a>
+                        </div>
                     </div>
                 </div>
 
-                <div class="col-md-4">
-                    <img src="../public/images/4.jpg" alt="">
-                    <div class="journal">
-                    <div class="box-image2__info">
-                        <p class="box-image2__country">Siem Reap</p>
-                        <p class="box-image2__tour">The Mekong Boutique River Cruise: Laos to China</p>
+                <div class="col-md-4 photoGraph">
+                    <img src="../public/images/4.jpg">
+                    <div class="box-image__info">
+                        <div class="content">
+                            <h3 class="box-image2__title">Siem Reap</h3>
+                            <p class="box-image2__tour">The Mekong Boutique River Cruise: Laos to China</p>
+                            <span class="box-image2__date">7 Days / 8 Nights</span>
+                            </br>
+                            <a class="box-image2__view" href="#">View tour</a>
+                        </div>
                     </div>
-                    <div class="box-image2__info_bot">
-                        <span class="box-image2__date">7 Days / 8 Nights</span>
-                        <a class="box-image2__view" href="#">View tour</a>
-                    </div>
+                </div>
+
+                <div class="col-md-4 photoGraph">
+                    <img src="../public/images/4.jpg">
+                    <div class="box-image__info">
+                        <div class="content">
+                            <h3 class="box-image2__title">Siem Reap</h3>
+                            <p class="box-image2__tour">The Mekong Boutique River Cruise: Laos to China</p>
+                            <span class="box-image2__date">7 Days / 8 Nights</span>
+                            </br>
+                            <a class="box-image2__view" href="#">View tour</a>
+                        </div>
                     </div>
                 </div>
             </div>
+            <!-- row end-->
 
-            <div class="row">
-                <div class="col-md-4">
-                    <img src="../public/images/4.jpg" alt="">
-                    <div class="journal">
-                    <div class="box-image2__info">
-                        <p class="box-image2__country">Siem Reap</p>
-                        <p class="box-image2__tour">The Mekong Boutique River Cruise: Laos to China</p>
-                    </div>
-                    <div class="box-image2__info_bot">
-                        <span class="box-image2__date">7 Days / 8 Nights</span>
-                        <a class="box-image2__view" href="#">View tour</a>
-                    </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                    <img src="../public/images/4.jpg" alt="">
-                    <div class="journal">
-                    <div class="box-image2__info">
-                        <p class="box-image2__country">Siem Reap</p>
-                        <p class="box-image2__tour">The Mekong Boutique River Cruise: Laos to China</p>
-                    </div>
-                    <div class="box-image2__info_bot">
-                        <span class="box-image2__date">7 Days / 8 Nights</span>
-                        <a class="box-image2__view" href="#">View tour</a>
-                    </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                    <img src="../public/images/4.jpg" alt="">
-                    <div class="journal">
-                    <div class="box-image2__info">
-                        <p class="box-image2__country">Siem Reap</p>
-                        <p class="box-image2__tour">The Mekong Boutique River Cruise: Laos to China</p>
-                    </div>
-                    <div class="box-image2__info_bot">
-                        <span class="box-image2__date">7 Days / 8 Nights</span>
-                        <a class="box-image2__view" href="#">View tour</a>
-                    </div>
-                    </div>
-                </div>
-                
-            </div>
         </div>
     </div>
 
