--- a/WebPage/page.html
+++ b/WebPage/page.html
@@ -22,35 +22,28 @@
             <div class="window">
                 <div class="image_reel">
                     <a href="#"><img src="../public/images/1.jpg"></a>
-                    <a href="#"><img src="../public/images/3.jpg"></a>
                     <a href="#"><img src="../public/images/2.jpg"></a>
-                    
+                    <a href="#"><img src="../public/images/3.jpg"></a>
                 </div>
             </div>
             <div class="paging">
                 <div class="aj">
                     <span class="spanborder"></span>
-                <div class="page_image">
+                <div class="page_image" rel="1">
                     <img src="../public/images/1.jpg">
                     <span>Bhutan</span>
                 </div>
                 </div>
-
                 <br/>
-
                 <div class="aj">
-                    <!--<span class="spanborder"></span>-->
-                <div class="page_image">
+                <div class="page_image" rel="2">
                     <img src="../public/images/2.jpg">
                     <span>Panama</span>
                 </div>
                 </div>
-
                 <br/>
-
                 <div class="aj">
-                    <!--<span class="spanborder"></span>-->
-                <div class="page_image">
+                <div class="page_image" rel="3">
                     <img src="../public/images/3.jpg">
                     <span>Cameroon</span>
                 </div>
