--- a/WebPage/page.html
+++ b/WebPage/page.html
@@ -61,7 +61,7 @@
 
     <div class="header__logo_menu_wrap">
             <div class="header__logo">
-                <a href="index.html"><img src="../public/images/logo-white.png" alt=""></a>
+                <a href="index.html"><img src="../public/images/ling.ico" alt=""></a>
             </div>
 
             <div class="header__menu">
