--- a/WebPage/page.html
+++ b/WebPage/page.html
@@ -31,6 +31,7 @@
                     <div class="page_image" rel="1">
                         <span class="spanborder"></span>
                         <img src="../public/images/1.jpg">
+                        
                         <span>Bhutan</span>
                     </div>
                 </div>
@@ -113,7 +114,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 photoGraph">
-                    <img src="../public/images/BestHours.jpg" alt="">
+                    <img src="../public/images/WechatIMG10.jpeg" alt="">
+                    <a href="" class="more">More<i class="glyphicon glyphicon-map-marker"></i></a>
                     <div class="box-image__info">
                         <h4 class="box-image__country">Hong Kong</h4>
                         <p class="box-image__tour">309</p>
