--- a/WebPage/page.html
+++ b/WebPage/page.html
@@ -32,7 +32,7 @@
                         <span class="spanborder"></span>
                         <img src="../public/images/IMG_2385.JPG">
                         
-                        <span>Bhutan</span>
+                        <span>稻城</span>
                     </div>
                 </div>
                 <br/>
@@ -40,7 +40,7 @@
                     <div class="page_image" rel="2">
                         <span class="spanborder"></span>
                         <img src="../public/images/IMG_2725.JPG">
-                        <span>Panama</span>
+                        <span>大理</span>
                     </div>
                 </div>
                 <br/>
