--- a/WebPage/page.html
+++ b/WebPage/page.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Cherry's Blog</title>
+    <link rel="icon" href="../public/images/IMG_2385.JPG">
     <link rel="stylesheet" href="../public/css/page.css">
     <script src="../src/bs/js/jquery-3.3.1.js"></script>
     <link rel="stylesheet" href="../src/bs/css/bootstrap.min.css">
@@ -508,7 +509,7 @@
 
                     <div class="box-image__info">
                         <h4 class="box-image__country">玫瑰海岸🌹</h4>
-                        <p class="box-image__tour">309</p>
+                        <p class="box-image__tour">4</p>
                     </div>
                 </div>
 
@@ -521,7 +522,7 @@
 
                     <div class="box-image__info">
                         <h4 class="box-image__country">凤凰山</h4>
-                        <p class="box-image__tour">287</p>
+                        <p class="box-image__tour">3</p>
                         
                     </div>
                 </div>
@@ -535,7 +536,7 @@
 
                     <div class="box-image__info">
                         <h4 class="box-image__country">大理</h4>
-                        <p class="box-image__tour">387</p>
+                        <p class="box-image__tour">5</p>
                     </div>
                 </div>
 
@@ -548,7 +549,7 @@
 
                     <div class="box-image__info">
                         <h4 class="box-image__country">湖南</h4>
-                        <p class="box-image__tour">273</p>
+                        <p class="box-image__tour">4</p>
                     </div>
                 </div>
             </div>
@@ -562,7 +563,7 @@
 
                     <div class="box-image__info">
                         <h4 class="box-image__country">桂林</h4>
-                        <p class="box-image__tour">266</p>
+                        <p class="box-image__tour">4</p>
                     </div>
                 </div>
 
@@ -575,7 +576,7 @@
 
                     <div class="box-image__info">
                         <h4 class="box-image__country">大梅沙</h4>
-                        <p class="box-image__tour">128</p>
+                        <p class="box-image__tour">4</p>
                     </div>
                 </div>
 
@@ -588,7 +589,7 @@
 
                     <div class="box-image__info">
                         <h4 class="box-image__country">中山</h4>
-                        <p class="box-image__tour">196</p>
+                        <p class="box-image__tour">5</p>
                     </div>
                 </div>
 
